src/golden/functions/errors/test.golden/listnohead.fl
List is a union, so you cannot ask for "head", which is only in Cons.

	takehead (List[A] l) = l.head
